--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 /Implementacao3/nbproject/private/
 /Implementacao3/build/
+/implementacao7/JavaApplication14/nbproject/private/
+/implementacao7/JavaApplication14/build/
