--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
 /Implementacao3/nbproject/private/
 /Implementacao3/build/
+/implementacao3/nbproject/private/
+/implementacao3/build/
+/Implementacao5/nbproject/private/
+/Implementacao5/build/
+/implementacao6/nbproject/private/
+/implementacao6/build/
+/implementacao9/nbproject/private/
+/ProjetoAula9/build/
+/ProjetoAula9/nbproject/private/
